# src/app/app.routes.ts
@@ -3,11 +3,16 @@ import { LoginPage } from './pages/login-page/login-page';
 import { SearchPage } from './pages/search-page/search-page';
 import { ProfilePage } from './pages/profile-page/profile-page';
 import { Layout } from './common-ui/layout/layout';
+import { AuthGuard } from './auth/auth.guard';
 
 export const routes: Routes = [
-    {path: '', component: Layout, children: [
-        {path: '', component: SearchPage},
-        {path: 'profile', component: ProfilePage},
-    ]},
-    {path: 'login', component: LoginPage}
+  {
+    path: '',
+    component: Layout,
+    children: [
+      { path: '', component: SearchPage },
+      { path: 'profile', component: ProfilePage, canActivate: [AuthGuard] }
+    ]
+  },
+  { path: 'login', component: LoginPage }
 ];
